--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,74 @@
 * {
     box-sizing: border-box;
+    --body-color: #ffffff;
+    --header-background: #2c3531;
     padding: 0;
     margin: 0;
 }
 
 body {
-    background-color:#2D68C4;
+    background-color: #2c3531;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #F2A900;
-    color: #ffffff;
+    background-color: var( --header-background);
 }
+
+.card-name{
+    display: inline-flex;
+    align-items: center;  
+    justify-content: right;
+    width: 35%;
+    height: 10%;
+    background-color: #d9b08c;
+    padding: 5px;
+    font-family: "Barlow Condensed",sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    font-style: normal;
+    font-stretch: condensed;
+    line-height: 3.5;
+    letter-spacing: normal;
+    text-transform: uppercase;
+    color: #fff;
+  }
+  
+  .nav{
+    display: inline-flex;
+    float: right;
+  }
+
+  .nav ul{
+    list-style: none;
+  }
+
+  .nav ul li{
+    display: inline;
+  }
+
+  .nav ul li a{
+    padding: 5px;
+    font-family: "Barlow Condensed",sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    font-style: normal;
+    font-stretch: condensed;
+    line-height: 3.5;
+    letter-spacing: normal;
+    text-transform: uppercase;
+    color: #fff;
+    text-decoration: none;
+    margin: 20px;
+    width: 100px;
+  }
+
+  .rounded {
+    border-bottom: 8px solid #116466;
+    border-radius: 5px;
+  }
+
+  .info-base{
+    width: 100%;
+  }
